--- a/Project2/View/Storyboard/Base.lproj/Main.storyboard
+++ b/Project2/View/Storyboard/Base.lproj/Main.storyboard
@@ -202,48 +202,12 @@
                                     <constraint firstAttribute="width" constant="335" id="j4N-Y5-YtX"/>
                                 </constraints>
                             </imageView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sHk-BO-mXn">
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eE4-nX-key">
                                 <rect key="frame" x="0.0" y="449" width="375" height="218"/>
-                                <subviews>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hlx-JU-8Ak">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="172"/>
-                                        <color key="backgroundColor" red="0.87450980389999999" green="0.85882352939999995" blue="0.81960784310000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    </tableView>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QRY-6u-QQf">
-                                        <rect key="frame" x="325" y="180" width="30" height="30"/>
-                                        <state key="normal" title="Button" image="noun_Check"/>
-                                        <connections>
-                                            <action selector="finishEdit:" destination="mFr-ri-311" eventType="touchUpInside" id="DdH-0L-u4J"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xm2-GP-7kp">
-                                        <rect key="frame" x="20" y="180" width="30" height="30"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="30" id="4jR-5q-yqr"/>
-                                            <constraint firstAttribute="width" secondItem="xm2-GP-7kp" secondAttribute="height" multiplier="1:1" id="VFK-Pb-1Y5"/>
-                                        </constraints>
-                                        <state key="normal" image="noun_Cancel"/>
-                                        <connections>
-                                            <action selector="finishEdit:" destination="mFr-ri-311" eventType="touchUpInside" id="C4u-tr-wkB"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstItem="QRY-6u-QQf" firstAttribute="width" secondItem="xm2-GP-7kp" secondAttribute="width" id="325-hV-Jff"/>
-                                    <constraint firstItem="QRY-6u-QQf" firstAttribute="width" secondItem="xm2-GP-7kp" secondAttribute="height" multiplier="1:1" id="9y3-Ry-p3u"/>
-                                    <constraint firstAttribute="bottom" secondItem="xm2-GP-7kp" secondAttribute="bottom" constant="8" id="Fvm-rJ-60j"/>
-                                    <constraint firstAttribute="trailing" secondItem="hlx-JU-8Ak" secondAttribute="trailing" id="Ha0-DJ-iL3"/>
-                                    <constraint firstItem="hlx-JU-8Ak" firstAttribute="top" secondItem="sHk-BO-mXn" secondAttribute="top" id="IlF-rf-G3Z"/>
-                                    <constraint firstItem="QRY-6u-QQf" firstAttribute="centerY" secondItem="xm2-GP-7kp" secondAttribute="centerY" id="Nlh-BE-Tg3"/>
-                                    <constraint firstItem="xm2-GP-7kp" firstAttribute="leading" secondItem="sHk-BO-mXn" secondAttribute="leading" constant="20" id="Pvw-ra-Fl6"/>
-                                    <constraint firstAttribute="bottom" secondItem="QRY-6u-QQf" secondAttribute="bottom" constant="8" id="UKX-e6-J3m"/>
-                                    <constraint firstItem="hlx-JU-8Ak" firstAttribute="leading" secondItem="sHk-BO-mXn" secondAttribute="leading" id="YuK-lM-7ez"/>
-                                    <constraint firstItem="xm2-GP-7kp" firstAttribute="top" secondItem="hlx-JU-8Ak" secondAttribute="bottom" constant="8" id="ajF-xw-TtF"/>
-                                    <constraint firstAttribute="trailing" secondItem="QRY-6u-QQf" secondAttribute="trailing" constant="20" id="egG-xf-xQl"/>
-                                    <constraint firstAttribute="trailing" secondItem="QRY-6u-QQf" secondAttribute="trailing" constant="20" id="pi1-sg-xHE"/>
-                                </constraints>
-                            </view>
+                                <connections>
+                                    <segue destination="WfK-Wl-JPr" kind="embed" id="cm5-nj-F31"/>
+                                </connections>
+                            </containerView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yke-94-yj6">
                                 <rect key="frame" x="0.0" y="449" width="375" height="218"/>
                                 <subviews>
@@ -378,28 +342,14 @@
                                         </constraints>
                                         <state key="normal" image="Icon_sortDown"/>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZBA-2a-ivG">
-                                        <rect key="frame" x="305" y="148" width="50" height="50"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="50" id="gIU-ww-7eA"/>
-                                            <constraint firstAttribute="width" constant="50" id="i24-Wt-jbV"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <state key="normal" image="Icon_Plus"/>
-                                        <connections>
-                                            <action selector="addBtnTapped:" destination="mFr-ri-311" eventType="touchUpInside" id="I7s-jQ-1vy"/>
-                                        </connections>
-                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.87450980389999999" green="0.85882352939999995" blue="0.81960784310000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstItem="oKA-Vq-X5A" firstAttribute="top" secondItem="Yke-94-yj6" secondAttribute="top" constant="10" id="2Zw-rR-bot"/>
                                     <constraint firstAttribute="trailing" secondItem="yHJ-M3-g6Z" secondAttribute="trailing" constant="20" id="3Bf-Lm-h1N"/>
                                     <constraint firstItem="S9l-L7-B0S" firstAttribute="centerY" secondItem="oKA-Vq-X5A" secondAttribute="centerY" id="Bk0-nH-IQX"/>
-                                    <constraint firstAttribute="trailing" secondItem="ZBA-2a-ivG" secondAttribute="trailing" constant="20" id="CB5-ou-fzT"/>
                                     <constraint firstItem="oKA-Vq-X5A" firstAttribute="leading" secondItem="yHJ-M3-g6Z" secondAttribute="leading" id="DXf-4k-F3f"/>
                                     <constraint firstItem="yHJ-M3-g6Z" firstAttribute="centerX" secondItem="Yke-94-yj6" secondAttribute="centerX" id="PdR-AZ-mf1"/>
-                                    <constraint firstAttribute="bottom" secondItem="ZBA-2a-ivG" secondAttribute="bottom" constant="20" id="Qvv-Qk-nfy"/>
                                     <constraint firstItem="yHJ-M3-g6Z" firstAttribute="top" secondItem="oKA-Vq-X5A" secondAttribute="bottom" constant="20" id="SYL-da-6IX"/>
                                     <constraint firstItem="S9l-L7-B0S" firstAttribute="width" secondItem="vtx-GG-yF4" secondAttribute="width" id="Sap-7j-fJq"/>
                                     <constraint firstItem="vtx-GG-yF4" firstAttribute="leading" secondItem="S9l-L7-B0S" secondAttribute="trailing" constant="15" id="Sc4-Ez-kvs"/>
@@ -410,23 +360,73 @@
                                     <constraint firstItem="vtx-GG-yF4" firstAttribute="centerY" secondItem="S9l-L7-B0S" secondAttribute="centerY" id="qXy-Ev-s4b"/>
                                 </constraints>
                             </view>
-                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eE4-nX-key">
-                                <rect key="frame" x="0.0" y="449" width="375" height="218"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZBA-2a-ivG">
+                                <rect key="frame" x="305" y="597" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="gIU-ww-7eA"/>
+                                    <constraint firstAttribute="width" constant="50" id="i24-Wt-jbV"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <state key="normal" image="Icon_Plus"/>
                                 <connections>
-                                    <segue destination="WfK-Wl-JPr" kind="embed" id="cm5-nj-F31"/>
+                                    <action selector="addBtnTapped:" destination="mFr-ri-311" eventType="touchUpInside" id="I7s-jQ-1vy"/>
                                 </connections>
-                            </containerView>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sHk-BO-mXn">
+                                <rect key="frame" x="0.0" y="449" width="375" height="218"/>
+                                <subviews>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hlx-JU-8Ak">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="172"/>
+                                        <color key="backgroundColor" red="0.87450980389999999" green="0.85882352939999995" blue="0.81960784310000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </tableView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QRY-6u-QQf">
+                                        <rect key="frame" x="325" y="180" width="30" height="30"/>
+                                        <state key="normal" title="Button" image="noun_Check"/>
+                                        <connections>
+                                            <action selector="finishEdit:" destination="mFr-ri-311" eventType="touchUpInside" id="DdH-0L-u4J"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xm2-GP-7kp">
+                                        <rect key="frame" x="20" y="180" width="30" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="30" id="4jR-5q-yqr"/>
+                                            <constraint firstAttribute="width" secondItem="xm2-GP-7kp" secondAttribute="height" multiplier="1:1" id="VFK-Pb-1Y5"/>
+                                        </constraints>
+                                        <state key="normal" image="noun_Cancel"/>
+                                        <connections>
+                                            <action selector="finishEdit:" destination="mFr-ri-311" eventType="touchUpInside" id="C4u-tr-wkB"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="QRY-6u-QQf" firstAttribute="width" secondItem="xm2-GP-7kp" secondAttribute="width" id="325-hV-Jff"/>
+                                    <constraint firstItem="QRY-6u-QQf" firstAttribute="width" secondItem="xm2-GP-7kp" secondAttribute="height" multiplier="1:1" id="9y3-Ry-p3u"/>
+                                    <constraint firstAttribute="bottom" secondItem="xm2-GP-7kp" secondAttribute="bottom" constant="8" id="Fvm-rJ-60j"/>
+                                    <constraint firstAttribute="trailing" secondItem="hlx-JU-8Ak" secondAttribute="trailing" id="Ha0-DJ-iL3"/>
+                                    <constraint firstItem="hlx-JU-8Ak" firstAttribute="top" secondItem="sHk-BO-mXn" secondAttribute="top" id="IlF-rf-G3Z"/>
+                                    <constraint firstItem="QRY-6u-QQf" firstAttribute="centerY" secondItem="xm2-GP-7kp" secondAttribute="centerY" id="Nlh-BE-Tg3"/>
+                                    <constraint firstItem="xm2-GP-7kp" firstAttribute="leading" secondItem="sHk-BO-mXn" secondAttribute="leading" constant="20" id="Pvw-ra-Fl6"/>
+                                    <constraint firstAttribute="bottom" secondItem="QRY-6u-QQf" secondAttribute="bottom" constant="8" id="UKX-e6-J3m"/>
+                                    <constraint firstItem="hlx-JU-8Ak" firstAttribute="leading" secondItem="sHk-BO-mXn" secondAttribute="leading" id="YuK-lM-7ez"/>
+                                    <constraint firstItem="xm2-GP-7kp" firstAttribute="top" secondItem="hlx-JU-8Ak" secondAttribute="bottom" constant="8" id="ajF-xw-TtF"/>
+                                    <constraint firstAttribute="trailing" secondItem="QRY-6u-QQf" secondAttribute="trailing" constant="20" id="egG-xf-xQl"/>
+                                    <constraint firstAttribute="trailing" secondItem="QRY-6u-QQf" secondAttribute="trailing" constant="20" id="pi1-sg-xHE"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="0.87450980389999999" green="0.85882352939999995" blue="0.81960784310000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="G2c-KZ-Yq1" firstAttribute="leading" secondItem="Va0-bd-i16" secondAttribute="leading" constant="20" id="5xP-X9-eiw"/>
                             <constraint firstItem="sHk-BO-mXn" firstAttribute="leading" secondItem="Yke-94-yj6" secondAttribute="leading" id="E0A-j4-mso"/>
                             <constraint firstItem="G2c-KZ-Yq1" firstAttribute="centerX" secondItem="5m0-ak-QCl" secondAttribute="centerX" id="H2o-1X-Ok3"/>
+                            <constraint firstItem="Va0-bd-i16" firstAttribute="trailing" secondItem="ZBA-2a-ivG" secondAttribute="trailing" constant="20" id="IFn-f0-Zeb"/>
                             <constraint firstItem="sHk-BO-mXn" firstAttribute="trailing" secondItem="Yke-94-yj6" secondAttribute="trailing" id="KLG-2o-qWT"/>
                             <constraint firstItem="Yke-94-yj6" firstAttribute="trailing" secondItem="Va0-bd-i16" secondAttribute="trailing" id="LlE-Rp-kNO"/>
                             <constraint firstItem="Yke-94-yj6" firstAttribute="top" secondItem="G2c-KZ-Yq1" secondAttribute="bottom" priority="999" constant="40" id="MNl-ID-2q5"/>
                             <constraint firstItem="eE4-nX-key" firstAttribute="top" secondItem="Yke-94-yj6" secondAttribute="top" id="RPe-1w-yOs"/>
                             <constraint firstItem="Yke-94-yj6" firstAttribute="leading" secondItem="Va0-bd-i16" secondAttribute="leading" id="TNJ-uB-No6"/>
+                            <constraint firstItem="Va0-bd-i16" firstAttribute="bottom" secondItem="ZBA-2a-ivG" secondAttribute="bottom" constant="20" id="TZc-h4-p3D"/>
                             <constraint firstItem="sHk-BO-mXn" firstAttribute="bottom" secondItem="Yke-94-yj6" secondAttribute="bottom" id="bkf-mU-b3s"/>
                             <constraint firstItem="eE4-nX-key" firstAttribute="bottom" secondItem="Yke-94-yj6" secondAttribute="bottom" id="c8U-BZ-9Gr"/>
                             <constraint firstItem="Yke-94-yj6" firstAttribute="bottom" secondItem="Va0-bd-i16" secondAttribute="bottom" id="dQw-sA-LVx"/>
@@ -447,6 +447,7 @@
                         <outlet property="imageEditContainerView" destination="eE4-nX-key" id="1L3-L3-zrS"/>
                         <outlet property="italicButton" destination="Oyb-zP-bPa" id="E5H-ac-N6M"/>
                         <outlet property="letterCaseButton" destination="w0y-2d-Q2k" id="iXK-ov-pAx"/>
+                        <outlet property="selectFontView" destination="sHk-BO-mXn" id="oQs-4B-EOn"/>
                         <outlet property="textEditView" destination="Yke-94-yj6" id="6x1-h4-UMb"/>
                     </connections>
                 </viewController>
